<resources>
    <string name="app_name">Carb GG</string>
    <string name="settings">Settings</string>
    <string name="calculator">Calculator</string>
    <string name="meals">Meals</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="enter_your_insulin_coefficient">Enter your insulin coefficient</string>
    <string name="enter_insulin_coefficient">Enter insulin coefficient</string>
    <string name="hint_name">Meal name</string>
    <string name="hint_carbs">Carbohydrates amount</string>
    <string name="button_save">Save meal</string>
    <string name="empty_not_saved">Meal not saved because it is empty.</string>
    <string name="meal_saved">Meal was added to the database</string>
    <string name="calculate">Calculate</string>
    <string name="clicking_on_an_item_removes_it">Clicking on an item removes it</string>
    <string name="add_meal">Add meal</string>
    <string name="please_enter_your_insulin_coefficient">Please enter your insulin coefficient per 10g of carbohydrates:</string>
</resources>